tests/baselines/reference/duplicateVariablesWithAny.errors.txt
tests/cases/compiler/duplicateVariablesWithAny.ts(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'any' at tests/cases/compiler/duplicateVariablesWithAny.ts 1:4, but here has type 'number'.
tests/cases/compiler/duplicateVariablesWithAny.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' has type 'string' at tests/cases/compiler/duplicateVariablesWithAny.ts 4:4, but here has type 'any'.
tests/cases/compiler/duplicateVariablesWithAny.ts(10,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'any' at tests/cases/compiler/duplicateVariablesWithAny.ts 8:8, but here has type 'number'.
tests/cases/compiler/duplicateVariablesWithAny.ts(13,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' has type 'string' at tests/cases/compiler/duplicateVariablesWithAny.ts 11:8, but here has type 'any'.


==== tests/cases/compiler/duplicateVariablesWithAny.ts (4 errors) ====
    // They should have to be the same even when one of the types is 'any'
    var x: any;
    var x = 2; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'any' at tests/cases/compiler/duplicateVariablesWithAny.ts 1:4, but here has type 'number'.
    
    var y = "";
    var y; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' has type 'string' at tests/cases/compiler/duplicateVariablesWithAny.ts 4:4, but here has type 'any'.
    
    module N {
        var x: any;
        var x = 2; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'any' at tests/cases/compiler/duplicateVariablesWithAny.ts 8:8, but here has type 'number'.
    
        var y = "";
        var y; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' has type 'string' at tests/cases/compiler/duplicateVariablesWithAny.ts 11:8, but here has type 'any'.
    }
    
    var z: any;
    var z; // ok